--- a/DocuSign iOS SDK/SDK/Signing/DSSigning.storyboard
+++ b/DocuSign iOS SDK/SDK/Signing/DSSigning.storyboard
@@ -17,11 +17,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zjl-lT-7kZ">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zjl-lT-7kZ">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                                 <animations/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </webView>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y5X-HL-uvP">
                                 <rect key="frame" x="334" y="487" width="100" height="49"/>
                                 <subviews>
@@ -106,10 +106,10 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="cancelBarButton" destination="TLK-3Q-1WW" id="iTG-Jg-aD5"/>
+                        <outlet property="containerView" destination="Zjl-lT-7kZ" id="Sz4-Ik-3ci"/>
                         <outlet property="finishBarButton" destination="xSg-Eg-zs2" id="VBy-K5-i6y"/>
                         <outlet property="loadingView" destination="Y5X-HL-uvP" id="Gzy-Tz-Zuj"/>
                         <outlet property="startingPromptView" destination="VEk-sc-1u2" id="b9O-xH-rYr"/>
-                        <outlet property="webView" destination="Zjl-lT-7kZ" id="Iq2-rP-F2L"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qpp-3b-7j5" userLabel="First Responder" sceneMemberID="firstResponder"/>
